Latest changes from Trincket

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <style>
     .user-cell {
-      background-image: url(user.svg);
+      background-image: url(ditchamPark.png);
       background-position: center;
       background-repeat: no-repeat;
       height: 400px;
@@ -20,8 +20,9 @@
 <body>
   <table width="100%">
     <tr>
-      <td id="dpu" class="user-cell" width="50%"><button type="button"
-        onclick="go()">Go!</button></td>
+      <td id="dpu" class="user-cell" width="50%">
+        <button type="button" onclick="sayYourName()">Go!</button>
+      </td>
       <td id="dpuOnRight" class="user-cell" width="50%"><button type="button"
         onclick="alert(nameOfDpuOnRight); afterDpuOnRightSaysName();">Say Name</button></td>
     </tr>
